--- a/ch8/Cargo.toml
+++ b/ch8/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+fake = "2.2"
+
 [dependencies]
+unicode-segmentation = "1.6"
+
